# fw-crux

./: .gitignore  .gitmodules  README
scripts/: install_dependences.sh  pico_build.sh  pico_cleanBuild.sh  sim_build.sh  sim_build_run.sh  sim_cleanbuild.sh  sim_cleanbuild_run.sh  sim_run.sh  update.sh
src/: CMakeLists.txt
src/include/boardSystem/: boardSystem.h  boardSystem_config.h  boardSystem_pinConfig.h  boardSystem_private.h  linkarch_config.h
src/include/boardSystem/ADCAnalysis/: ADCAnalysis.h  ADCAnalysis_config.h  ADCAnalysis_private.h  ADCAnalysis_tasks.h  ADCAnalysis_type.h
src/include/boardSystem/command/: command.h  command_config.h  command_mcui.h  command_private.h  command_protocol.h  command_tasks.h  command_type.h
src/include/boardSystem/kickControl/: kickControl.h  kickControl_config.h  kickControl_private.h  kickControl_tasks.h  kickControl_type.h
src/include/boardSystem/kickControl/kickDriver/: kickDriver.h  kickDriver_config.h  kickDriver_private.h  kickDriver_types.h
src/include/boardSystem/motorControl/: motorControl.h  motorControl_config.h  motorControl_private.h  motorControl_tasks.h  motorControl_type.h
src/include/boardSystem/motorControl/motorDriver/: motorDriver.h  motorDriver_config.h  motorDriver_private.h  motorDriver_types.h
src/include/boardSystem/onBoardDebug/: onBoardDebug.h  onBoardDebug_config.h  onBoardDebug_private.h  onBoardDebug_tasks.h  onBoardDebug_type.h
src/include/boardSystem/onBoardDebug/usbConnection/: usbConnection.h  usbConnection_config.h  usbConnection_private.h  usbConnection_types.h
src/include/boardSystem/playerInfo/: playerInfo.h  playerInfo_private.h  playerInfo_type.h
src/src/: main.c
src/src/boardSystem/: boardSystem.c
src/src/boardSystem/ADCAalisys/: ADCAnalisys.c
src/src/boardSystem/command/: command.c
src/src/boardSystem/kickControl/: kickControl.c
src/src/boardSystem/kickControl/kickDriver/: kickDriver.c
src/src/boardSystem/motorControl/: motorControl.c
src/src/boardSystem/motorControl/motorDriver/: motorDriver.c
src/src/boardSystem/onBoardDebug/: onBoardDebug.c
src/src/boardSystem/onBoardDebug/usbConnection/: usbConnection.c
src/src/boardSystem/playerInfo/: playerinfo.c
